[tool.poetry]
name = "todo-api"
version = "0.1.0"
description = ""
authors = ["Jamil Omar <jfalconi63@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.20"
python-dotenv = "^1.0.0"
validators = "^0.22.0"
pydantic-settings = "^2.0.3"
aiosqlite = "^0.19.0"
greenlet = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
